[gd_scene load_steps=6 format=3 uid="uid://l8qhlw52wqqd"]

[ext_resource type="Script" uid="uid://dctj0i0yoo2nb" path="res://Characters/Player/Inventory/Inv_ui.gd" id="1_bdfwv"]
[ext_resource type="Script" uid="uid://c8kjtyv1t8n77" path="res://Characters/Player/Inventory/global_inventory.gd" id="2_jccat"]
[ext_resource type="Texture2D" uid="uid://r17vaofxxqde" path="res://Sprite/Astronaute_right.png" id="3_00ghv"]
[ext_resource type="PackedScene" uid="uid://f27c7wsqnou5" path="res://Characters/Player/Inventory/inv_ui_slot.tscn" id="3_h7x6q"]
[ext_resource type="PackedScene" uid="uid://dj1giy3qvujh8" path="res://Characters/Player/Inventory/crafting_ui_slot.tscn" id="5_km4om"]

[node name="Inv_ui" type="Control"]
process_mode = 3
z_index = 11
texture_filter = 1
custom_minimum_size = Vector2(1152, 648)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_bdfwv")

[node name="GlobalInventory" type="Control" parent="."]
custom_minimum_size = Vector2(196, 80)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -98.0
offset_top = -56.0
offset_right = 98.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2_jccat")

[node name="ObjectPanel" type="Panel" parent="GlobalInventory"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(196, 80)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Inventaire" type="NinePatchRect" parent="GlobalInventory/ObjectPanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 80)
layout_mode = 0
offset_left = 64.0
offset_right = 192.0
offset_bottom = 80.0
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="GridContainer" type="GridContainer" parent="GlobalInventory/ObjectPanel/Inventaire"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.0
offset_top = -38.0
offset_right = 58.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
columns = 6

[node name="Inv_UI_slot1" parent="GlobalInventory/ObjectPanel/Inventaire/GridContainer" instance=ExtResource("3_h7x6q")]
layout_mode = 2

[node name="Inv_UI_slot2" parent="GlobalInventory/ObjectPanel/Inventaire/GridContainer" instance=ExtResource("3_h7x6q")]
layout_mode = 2

[node name="Inv_UI_slot3" parent="GlobalInventory/ObjectPanel/Inventaire/GridContainer" instance=ExtResource("3_h7x6q")]
layout_mode = 2

[node name="Inv_UI_slot4" parent="GlobalInventory/ObjectPanel/Inventaire/GridContainer" instance=ExtResource("3_h7x6q")]
layout_mode = 2

[node name="Inv_UI_slot5" parent="GlobalInventory/ObjectPanel/Inventaire/GridContainer" instance=ExtResource("3_h7x6q")]
layout_mode = 2

[node name="Inv_UI_slot6" parent="GlobalInventory/ObjectPanel/Inventaire/GridContainer" instance=ExtResource("3_h7x6q")]
layout_mode = 2

[node name="Inv_UI_slot7" parent="GlobalInventory/ObjectPanel/Inventaire/GridContainer" instance=ExtResource("3_h7x6q")]
layout_mode = 2

[node name="Inv_UI_slot8" parent="GlobalInventory/ObjectPanel/Inventaire/GridContainer" instance=ExtResource("3_h7x6q")]
layout_mode = 2

[node name="Inv_UI_slot9" parent="GlobalInventory/ObjectPanel/Inventaire/GridContainer" instance=ExtResource("3_h7x6q")]
layout_mode = 2

[node name="Inv_UI_slot10" parent="GlobalInventory/ObjectPanel/Inventaire/GridContainer" instance=ExtResource("3_h7x6q")]
layout_mode = 2

[node name="Inv_UI_slot11" parent="GlobalInventory/ObjectPanel/Inventaire/GridContainer" instance=ExtResource("3_h7x6q")]
layout_mode = 2

[node name="Inv_UI_slot12" parent="GlobalInventory/ObjectPanel/Inventaire/GridContainer" instance=ExtResource("3_h7x6q")]
layout_mode = 2

[node name="Inv_UI_slot13" parent="GlobalInventory/ObjectPanel/Inventaire/GridContainer" instance=ExtResource("3_h7x6q")]
layout_mode = 2

[node name="Inv_UI_slot14" parent="GlobalInventory/ObjectPanel/Inventaire/GridContainer" instance=ExtResource("3_h7x6q")]
layout_mode = 2

[node name="Inv_UI_slot15" parent="GlobalInventory/ObjectPanel/Inventaire/GridContainer" instance=ExtResource("3_h7x6q")]
layout_mode = 2

[node name="Inv_UI_slot16" parent="GlobalInventory/ObjectPanel/Inventaire/GridContainer" instance=ExtResource("3_h7x6q")]
layout_mode = 2

[node name="Inv_UI_slot17" parent="GlobalInventory/ObjectPanel/Inventaire/GridContainer" instance=ExtResource("3_h7x6q")]
layout_mode = 2

[node name="Inv_UI_slot18" parent="GlobalInventory/ObjectPanel/Inventaire/GridContainer" instance=ExtResource("3_h7x6q")]
layout_mode = 2

[node name="Inv_UI_slot19" parent="GlobalInventory/ObjectPanel/Inventaire/GridContainer" instance=ExtResource("3_h7x6q")]
layout_mode = 2

[node name="Inv_UI_slot20" parent="GlobalInventory/ObjectPanel/Inventaire/GridContainer" instance=ExtResource("3_h7x6q")]
layout_mode = 2

[node name="Inv_UI_slot21" parent="GlobalInventory/ObjectPanel/Inventaire/GridContainer" instance=ExtResource("3_h7x6q")]
layout_mode = 2

[node name="Inv_UI_slot22" parent="GlobalInventory/ObjectPanel/Inventaire/GridContainer" instance=ExtResource("3_h7x6q")]
layout_mode = 2

[node name="Inv_UI_slot23" parent="GlobalInventory/ObjectPanel/Inventaire/GridContainer" instance=ExtResource("3_h7x6q")]
layout_mode = 2

[node name="Inv_UI_slot24" parent="GlobalInventory/ObjectPanel/Inventaire/GridContainer" instance=ExtResource("3_h7x6q")]
layout_mode = 2

[node name="Equipement" type="NinePatchRect" parent="GlobalInventory/ObjectPanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 80)
layout_mode = 0
offset_right = 64.0
offset_bottom = 80.0
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="Sprite2D" type="Sprite2D" parent="GlobalInventory/ObjectPanel/Equipement"]
position = Vector2(33, 15)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_00ghv")

[node name="GridContainer" type="GridContainer" parent="GlobalInventory/ObjectPanel/Equipement"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -28.0
offset_top = -36.0
offset_right = 28.0
grow_horizontal = 2
grow_vertical = 0
columns = 3

[node name="Inv_UI_slot1" parent="GlobalInventory/ObjectPanel/Equipement/GridContainer" instance=ExtResource("3_h7x6q")]
layout_mode = 2

[node name="Inv_UI_slot2" parent="GlobalInventory/ObjectPanel/Equipement/GridContainer" instance=ExtResource("3_h7x6q")]
layout_mode = 2

[node name="Inv_UI_slot3" parent="GlobalInventory/ObjectPanel/Equipement/GridContainer" instance=ExtResource("3_h7x6q")]
layout_mode = 2

[node name="Inv_UI_slot4" parent="GlobalInventory/ObjectPanel/Equipement/GridContainer" instance=ExtResource("3_h7x6q")]
layout_mode = 2

[node name="Inv_UI_slot5" parent="GlobalInventory/ObjectPanel/Equipement/GridContainer" instance=ExtResource("3_h7x6q")]
layout_mode = 2

[node name="Inv_UI_slot6" parent="GlobalInventory/ObjectPanel/Equipement/GridContainer" instance=ExtResource("3_h7x6q")]
layout_mode = 2

[node name="CraftingPanel" type="Panel" parent="GlobalInventory"]
custom_minimum_size = Vector2(196, 104)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Craft" type="NinePatchRect" parent="GlobalInventory/CraftingPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Page1" type="GridContainer" parent="GlobalInventory/CraftingPanel/Craft"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Crafting_ui_slot" parent="GlobalInventory/CraftingPanel/Craft/Page1" instance=ExtResource("5_km4om")]
layout_mode = 2

[node name="Crafting_ui_slot2" parent="GlobalInventory/CraftingPanel/Craft/Page1" instance=ExtResource("5_km4om")]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GlobalInventory"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
alignment = 1

[node name="ObjectPanelButton" type="Button" parent="GlobalInventory/VBoxContainer"]
custom_minimum_size = Vector2(32, 16)
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Inventory"

[node name="CraftingPanelButton" type="Button" parent="GlobalInventory/VBoxContainer"]
custom_minimum_size = Vector2(32, 16)
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Craft"

[node name="Active_bar" type="HBoxContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(196, 16)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -98.0
offset_top = 56.0
offset_right = 98.0
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="GridContainer" type="GridContainer" parent="Active_bar"]
layout_mode = 2
columns = 100

[node name="Inv_UI_slot1" parent="Active_bar/GridContainer" instance=ExtResource("3_h7x6q")]
layout_mode = 2

[node name="Inv_UI_slot2" parent="Active_bar/GridContainer" instance=ExtResource("3_h7x6q")]
layout_mode = 2

[node name="Inv_UI_slot3" parent="Active_bar/GridContainer" instance=ExtResource("3_h7x6q")]
layout_mode = 2

[node name="Inv_UI_slot4" parent="Active_bar/GridContainer" instance=ExtResource("3_h7x6q")]
layout_mode = 2

[node name="Inv_UI_slot5" parent="Active_bar/GridContainer" instance=ExtResource("3_h7x6q")]
layout_mode = 2

[node name="Inv_UI_slot6" parent="Active_bar/GridContainer" instance=ExtResource("3_h7x6q")]
layout_mode = 2

[node name="Inv_UI_slot7" parent="Active_bar/GridContainer" instance=ExtResource("3_h7x6q")]
layout_mode = 2

[node name="Inv_UI_slot8" parent="Active_bar/GridContainer" instance=ExtResource("3_h7x6q")]
layout_mode = 2

[connection signal="pressed" from="GlobalInventory/VBoxContainer/ObjectPanelButton" to="GlobalInventory" method="_on_object_panel_button_pressed"]
[connection signal="pressed" from="GlobalInventory/VBoxContainer/CraftingPanelButton" to="GlobalInventory" method="_on_crafting_panel_button_pressed"]
